...

@OptIn(ExperimentalCoroutinesApi::class, FlowPreview::class)
open class BaseSelectAssetViewModel(
    getSession: GetSession,
    private val recentActivityQuery: RecentActivityQuery,
    protected val service: GemAssetSelectionServiceInterface,
    val search: SelectSearch,
    selectType: GemSelectAssetType,
    protected val ioDispatcher: CoroutineDispatcher,
    protected val context: Context,
) : ViewModel(),
    ToastEmitter by ToastEmitterImpl() {

...
