...
    private suspend fun sections(data: PriceData?): List<GemListSection> = data?.let {
        runCatchingCancellable {
            chartService.sections(
                asset = it.asset.toGem(),
                price = it.price?.price,
                market = it.market?.toGem(),
                priceAlerts = it.priceAlerts.map { alert -> alert.toGem() },
                links = it.links.map { link -> link.toGem() },
            )
        }.getOrNull()
    }.orEmpty()

    @Inject
...
