...
            )
            Spacer(modifier = Modifier.size(space24))
            MainActionButton(
                title = stringResource(id = R.string.wallet_import_existing_wallet),
                modifier = Modifier
                    .widthIn(max = SceneSizing.buttonMaxWidth)
                    .testTag("import"),
                onClick = onImportWallet,
            )
        }
    }
}

...
