...
        LazyColumn(modifier = Modifier) {
            item {
                SearchBar(query = chainFilter)
            }
            item {
                ChainItem(
                    modifier = Modifier.testTag("multicoin_item"),
                    title = types.multicoin.string(LocalContext.current),
                    icon = R.drawable.multicoin_wallet,
                    listPosition = ListPosition.Single,
                ) {
                    onSelect(ImportType.phrase())
                }
...
