...
import uniffi.gemstone.GemSettingsServiceInterface
import java.util.Locale
import javax.inject.Inject

@HiltViewModel
class PreferencesViewModel @Inject constructor(
    private val preferences: ObservablePreferences,
    private val settingsService: GemSettingsServiceInterface,
    getCurrentCurrency: GetCurrentCurrency,
    @param:IoDispatcher private val ioDispatcher: CoroutineDispatcher,
    @param:ApplicationContext private val context: Context,
) : ViewModel() {

    private val isPerpetualEnabled = preferences.isPerpetualEnabled()
        .stateIn(viewModelScope, SharingStarted.Eagerly, false)

    private val currency = getCurrentCurrency.getCurrency()

    private val language = MutableStateFlow(languageText { context.resources.configuration })

    val appearance = preferences.appearance()
        .stateIn(viewModelScope, SharingStarted.Eagerly, Appearance.System)

...
