appId: ${APP_ID}
---
- launchApp
- tapOn:
    id: "settingsTab"
- tapOn:
    id: "preferences"
- tapOn:
    id: "currency"
- tapOn:
    id: "EUR"
- launchApp
- extendedWaitUntil:
    visible:
      id: "bitcoin"
      containsDescendants:
        - text: "€[0-9,]+\\.[0-9]+"
    timeout: 30000
- takeScreenshot: ${output.journey}_home_eur
